src/test/resources/public/input/typechecking/fail/undeclared_id/fail03.jova
class Test{

  public int callMethod(){
    int ret;
    ret = callNotexistingMethod();
    
    return 0;
  }
}

class Main {

  public int main() {
    
    return 0;
  }

}